// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Features Merge Conflict Resolution it should properly fix merge conflicts 1`] = `
"# This file is generated by running \\"yarn install\\" inside your project.
# Manual changes might be lost - proceed with caution!

__metadata:
  version: 4
  cacheKey: 0

\\"no-deps@npm:*\\":
<<<<<<< HEAD
  version: 1.0.0
  resolution: \\"no-deps@npm:1.0.0\\"
  checksum: <checksum stripped>
=======
  version: 2.0.0
  resolution: \\"no-deps@npm:2.0.0\\"
  checksum: <checksum stripped>
>>>>>>> 2.0.0
  languageName: node
  linkType: hard

\\"root-workspace-0b6124@workspace:.\\":
  version: 0.0.0-use.local
  resolution: \\"root-workspace-0b6124@workspace:.\\"
  dependencies:
    no-deps: \\"*\\"
  languageName: unknown
  linkType: soft
"
`;

exports[`Features Merge Conflict Resolution it should properly fix merge conflicts 2`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0048: Automatically fixed merge conflicts 👍
➤ YN0000: ┌ Resolution step
➤ YN0000: └ Completed
➤ YN0000: ┌ Fetch step
➤ YN0019: │ no-deps-npm-1.0.0-cf533b267a-58e8c7e103.zip appears to be unused - removing
➤ YN0000: └ Completed
➤ YN0000: ┌ Link step
➤ YN0000: └ Completed
➤ YN0000: Done
",
}
`;

exports[`Features Merge Conflict Resolution it should properly fix merge conflicts when old is Yarn 1 and new is Yarn 2 1`] = `
"# This file is generated by running \\"yarn install\\" inside your project.
# Manual changes might be lost - proceed with caution!

__metadata:
  version: 4
  cacheKey: 0

<<<<<<< HEAD
no-deps@*:
  version \\"2.0.0\\"
  resolved \\"http://localhost:64572/no-deps/-/no-deps-2.0.0.tgz#f3b8f24d76b21b04748e6888672752b872236fa7\\"
  integrity sha1-87jyTXayGwR0jmiIZydSuHIjb6c=
=======
\\"no-deps@npm:*\\":
  version: 2.0.0
  resolution: \\"no-deps@npm:2.0.0\\"
  checksum: <checksum stripped>
  languageName: node
  linkType: hard

\\"root-workspace-0b6124@workspace:.\\":
  version: 0.0.0-use.local
  resolution: \\"root-workspace-0b6124@workspace:.\\"
  dependencies:
    no-deps: \\"*\\"
  languageName: unknown
  linkType: soft
>>>>>>> yarn2
"
`;

exports[`Features Merge Conflict Resolution it should properly fix merge conflicts when old is Yarn 1 and new is Yarn 2 2`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0048: Automatically fixed merge conflicts 👍
➤ YN0000: ┌ Resolution step
➤ YN0000: └ Completed
➤ YN0000: ┌ Fetch step
➤ YN0000: └ Completed
➤ YN0000: ┌ Link step
➤ YN0000: └ Completed
➤ YN0000: Done
",
}
`;
